--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
         "react"
     ],
     "rules": {
-        "no-use-before-define": 0
+        "no-use-before-define": 0,
+        "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
     }
 }
