--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,6 @@
         "react"
     ],
     "rules": {
-        "no-use-before-define": 0,
-        "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+        "no-use-before-define": 0
     }
 }
