--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "rules": {
         "no-use-before-define": 0,
         "react/prop-types": ["error", { "ignore": ["navigation"] }],
-        "react/no-unstable-nested-components": ["error", { "allowAsProps": true }]
+        "react/no-unstable-nested-components": ["error", { "allowAsProps": true }],
+        "import/prefer-default-export": 0
     }
 }
